tests/solidity/bad/optaliased.sol
contract Test {
    function foo() public view {}
    function echidna_opt_test() public view returns (bool) {
        return true;
    }
}
